--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@ class: middle
 6. Analysis the data
 
 7. Result interpretation
+
+---
+class: middle
+
+# Defining exposure groups 
+
+
+- Occupational: pilots; bus drivers; doctors; nurses; workers with a specified industrial exposure, etc. 
+
+- Infectious: hepatitis A/B/C virus; vaccines; etc.
+
+- Social/biological: breast feeding; stress; smoking; drinking, etc. 
+
+---
+class: middle
+
+# Types of cohort study
+
+- **Concurrent** Cohort Studies:
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
