updated page 4 fig

--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
     <title>Cohort Study   .med[– basic knowledge and analysis]</title>
     <meta charset="utf-8" />
     <meta name="author" content="Chaochen Wang (CWAN)" />
-    <script src="libs/htmlwidgets-1.5.1/htmlwidgets.js"></script>
-    <script src="libs/d3-3.3.8/d3.min.js"></script>
-    <script src="libs/dagre-0.4.0/dagre-d3.min.js"></script>
-    <link href="libs/mermaid-0.3.0/dist/mermaid.css" rel="stylesheet" />
-    <script src="libs/mermaid-0.3.0/dist/mermaid.js"></script>
-    <link href="libs/DiagrammeR-styles-0.2/styles.css" rel="stylesheet" />
-    <script src="libs/chromatography-0.1/chromatography.js"></script>
-    <script src="libs/DiagrammeR-binding-1.0.5/DiagrammeR.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -43,9 +35,16 @@ class: middle
 
 "Any designated group of individuals who are followed or traced over a period of time." --- Rothman 1998
 
-<div id="htmlwidget-b9aff4a52a1cd3732887" style="width:800px;height:400px;" class="DiagrammeR html-widget"></div>
-<script type="application/json" data-for="htmlwidget-b9aff4a52a1cd3732887">{"x":{"diagram":"\ngraph LR\n  A((Population))-->B[People <br> without<br> disease]\n  B-->C[Exposed]\n  B-->D[Not Exposed]\n  C-->E[Disease]\n  C-->F[No Disease]\n  D-->G[Disease]\n  D-->H[No Disease]\n"},"evals":[],"jsHooks":[]}</script>
 
+
+
+---
+class: top
+background-image: url("./fig/Direction.png")
+background-position: 50% 50%
+background-size: contain
+
+## Direction of enquiry
 
 
 ---
