--- a/index.html
+++ b/index.html
@@ -164,9 +164,14 @@ class: middle
 
 
 ---
-class: middle
+class: top, left
+background-image: url("./fig/nejm199509143331101_f2.jpeg")
+background-position: -180% -320%
+background-size: cover
 
-# Nurses Health Study
+# Nurses Health Study&lt;sup&gt;[1]&lt;/sup&gt;
+
+.med[[1]J. E. Manson et al., “Body weight and mortality among women,” New England Journal of Medicine, 1995.]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
