--- a/index.html
+++ b/index.html
@@ -299,6 +299,29 @@ class: middle
 
     - Selection of the population (representativeness)
     - Choice of comparison group &lt;br&gt; (healthy worker effect)
+    - Ascertainment of disease status &lt;br&gt; (losses to follow up)
+    
+    
+---
+class: middle
+
+# Example of bias: &lt;br&gt; HRT and breast cancer 
+
+- Self-reported drug history
+
+- People on HRT were more likely to be followed 
+
+- Detection bias: patients on HRT more likely to attend their physician than those not, thus they were more likely to have cancer detected early
+
+
+---
+class: middle
+
+# Confounding
+
+- Confounding is about alternative explanations
+
+- It occurs when an estimate of the association
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
