updated slides date

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ class: center, middle, inverse, title-slide
 
 # Cohort Study <br> .med[– basic knowledge and analysis]
 ### Chaochen Wang (CWAN)
-### 2020-03-27 15:00~16:00 <span class="citation">@CSS</span>
+### TBD 15:00~16:00
 
 ---
 
