updated date and time of the presentation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ class: center, middle, inverse, title-slide
 
 # Cohort Study <br> .med[– basic knowledge and analysis]
 ### Chaochen Wang (CWAN)
-### TBD 15:00~16:00
+### 2020-04-28 via hangout 15:00~16:00
 
 ---
 
@@ -263,7 +263,7 @@ class: middle
 
 Cholesterol and cancer 
 
-- Some cancer would reduce cholesterol levels: this doesn't mean low chilesterol leads to cancer 
+- Some cancer would reduce cholesterol levels: this doesn't mean low cholesterol leads to cancer 
 
 
 ---
