--- a/index.html
+++ b/index.html
@@ -444,13 +444,236 @@ class: middle
 
 - RCT is not always possible
 
+
+---
+class: middle 
+
+# Practical (1)
+
+
+European Prospective Investigation into Cancer and Nutrition (EPIC) study is a multi-centre prospective cohort study of adults conducted in 23 health centres in 10 European countries. At recruitment, participants were defined as "Exposed" to asbestos (石綿) if they had worked in an occupation defined by labour experts as being at risk of asbestos exposure. 
+
+88,265 cancer-free men were followed for an average of 8.4 years and information was collected about incidenct lung cancer during follow-up. 
+
+
+---
+class: middle 
+
+# Question 1
+
+Fill in the study design framework below:
+
+&lt;img src="fig/q1.png" width="1077" /&gt;
+
+---
+
+class: middle
+
+--
+# Answer 1
+
+&lt;img src="fig/a1.png" width="1071" /&gt;
+
+---
+class: middle 
+
+# Question 2
+
+Do you think that defining people as **"exposed"** to asbestos on the basis of job title provided an adequate measure of occupational asbestos exposure? 
+
+---
+class: middle
+
+--
+# Answer 2
+
+- Relatively crude
+
+- Some people may not actually/necessarily have been exposed only because their occupation. 
+
+- Same argument for people defined as un-exposed. 
+
+- No account was taken of the amount/duration of asbestos exposure. 
+
+- In accurate classification may occured. 
+
+
+---
+class: middle 
+
+# Question 3 
+
+People with lung cancer were excluded at baseline, why?
+
+
+---
+class: middle
+
+--
+# Answer 3
+
+- Lung cancer cases were excluded because they were no longer **at risk**. 
+
+- Exclude them ensure that the exposure preceded the onset of the disease. 
+
+
+---
+class: middle
+
+# Question 4 
+
+What were the strengths and limitations of using a population-based cohort (rather than a occupational-based cohort) for assessing the association between asbestos exposure and lung cancer risk? 
+
+---
+class: middle 
+
+--
+# Answer 4
+
+.pull-left[
+### Advantage
+
+- more generlisable
+
+- reflect the risk of asbestos exposure among the population
+
+]
+
+.pull-right[
+### Limitation
+
+- asbestos is relatively rare exposure
+
+- number of exposed will be small 
+
+- limits the statistical power
+
+]
+
+
+---
+class: middle
+
+# Practical (2)
+
+The Great Britain Asbestos Survey was established in 1971 to monitor death among workers with varying levels of exposure to asbestos. Workers were asked to report their length of employment and type of job (manufacturing, removal, insulation installation, or other)
+
+Participants were flagged through the National Health Service Central Register automatically if any death occured. 
+
+Finally, 15,496 deahts among 98,117 workers followed-up for 1,779,580 person-years.
+
+
+---
+class: middle 
+
+# Question 5
+
+Calculate the average death rate for the cohort during the follow-up, stating the units. For each individual, when would follow-up time begin and end?
+
+---
+class: middle
+
+--
+# Answer 5
+
+- average death rate = 15,496 / 1,779,580 = 0.0087 = 8.7 deaths per 1000 person-years at risk
+
+- Follow-up should be counted from the date of the first medical examination. It should be end at the last date of follow-up/flagging, or when dies, or lost to follow-up. 
+
+---
+class: middle 
+
+# Question 6 
+
+98% of the participants were successfully traced for follow-up through the registration system. Was loss to follow-up a potential source of bias in this study?
+
+--
+# Answer 6
+
+Only very few of the participants were lost to follow-up. This means that loss to follow-up would like induced minimal selection bias in this study. 
+
+
+---
+class: middle
+
+# Question 7 
+
+
+
+Researchers were interested in which characteristics increased the rate of death among the asbestos workers. Within the cohort, the incidence rate ratios of death were computed using a regression method, adjusting for age and sex. These ratios show the association of age at first exposure, length of exposure, smoking status, and job type with the risk of death. (Table in the next page)
+
+Can the association between asbestos exposure and death be assessed within this cohort?
+
+
+---
+class: inverse
+background-image: url("./fig/t1.png")
+background-position: 50% 50%
+background-size: contain
+
+
+&lt;!-- ```{r echo=FALSE} --&gt;
+&lt;!-- knitr::include_graphics("fig/t1.png") --&gt;
+&lt;!-- ``` --&gt;
+
+
+---
+class: middle
+
+--
+# Answer 7
+
+- All of the participants were exposed to asbestos. (No comparison group)
+
+- Impossible to assess the association between asbestos exposure and death. 
+
+- However, characteristics of asbestos exposure (length, job type) could be investigated in relation to risk of death. 
+
+---
+class: inverse
+background-image: url("./fig/t1.png")
+background-position: 50% 50%
+background-size: contain
+
+
+---
+class: middle
+
+# Question 8 
+
+Describe the association between length of exposure and risk of death. 
+
+--
+# Answer 8 
+
+With increasing length of exposure there is increasing risk of death among asbestos workers. (it is a dose-response relationship)
+
+---
+class: middle
+
+# Question 9 
+
+Overall, which factors increase the risk of death among people exposed to asbestos? 
+
+--
+# Answer 9
+
+- Longer exposure is associated with increase in the death rate. 
+
+- Death rate is 3 times higher among smokers than never smokers
+
+- Relative to manufacturing workers, insulation workers had 6.88 times higher rate. 
+
+
+
+
 ---
 class: middle, center, inverse
 
 # Thanks
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
-<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script src="libs/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
